# astraliminal

./: .gitignore  Cargo.toml  LICENSE  README.md  astraliminal.md  notes.md  run.bat
assets/icons/cursor/: README.md
lib/astral_core/: Cargo.toml  build.rs
lib/astral_core/src/: character.rs  cursor.rs  debugger.rs  introduction.rs  lib.rs  window.rs
lib/astral_core/src/debugger/: ui_bundles.rs  ui_components.rs
lib/astral_macros/: Cargo.toml  README.md
lib/astral_macros/src/: lib.rs
lib/astral_ui/: Cargo.toml
src/: character.rs  cursor.rs  debugger.rs  main.rs  plugin.rs
src/debugger/: fps.rs  ui_bundles.rs  ui_components.rs
