[package]
name = "astraliminal"
version = "0.1.0"
edition = "2021"

[dependencies]
astral_core.workspace = true
# astral_macros.workspace = true

[workspace]
members = ["lib/*", "bin/*"]
resolver = "2"
default-members = ["bin/astral_game"]

[workspace.dependencies]
astral_core = { path = "lib/astral_core" }
# astral_macros = { path = "lib/astral_macros" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
codegen-units = 1
