[package]
name = "astral_core"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13", features = ["dynamic_linking"] }
bevy_flycam = "0.13"
bevy_xpbd_3d = { git = "https://github.com/Jondolf/bevy_xpbd", branch = "main" }
# rapier3d = { version = "0.19", features = [ "simd-stable" ] }
chrono = { version = "0.4" }
