[package]
name = "astral_macros"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan Sawyer <jonmsawyer@gmail.com>"]
rust-version = "1.77.1"
categories = ["games"]
description = "A macros library for use within astraliminal."
readme = "README.md"
homepage = "https://astral.games/"
repository = "https://github.com/jonmsawyer/astraliminal/tree/main/lib/astral_macros"
license = "MIT OR Apache-2.0"
keywords = ["games"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
darling = "0.20"
# proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[lib]
proc-macro = true
